2008-06-12  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkentrycompletion.c (_gtk_entry_completion_resize_popup):
	limit the number of displayed items by the actual screen height
	instead of some arbitrary value (Bug #408154, Xan Lopez and
	Christian Dywan).

2008-06-11  Behdad Esfahbod  <behdad@gnome.org>

	Bug 503071 – Application direction changes to right to left even if
	theres no translation

	* configure.in: Bump glib requirement.

	* gtk/gtkaccellabel.c
	(_gtk_accel_label_class_get_accelerator_label):
	* gtk/gtkactiongroup.c (dgettext_swapped):
	* gtk/gtkbuilder.c (gtk_builder_class_init):
	* gtk/gtkbuilderparser.c (_dpgettext),
	(_gtk_builder_parser_translate):
	* gtk/gtkfilechooserdefault.c (list_size_data_func):
	* gtk/gtkimmulticontext.c (gtk_im_multicontext_append_menuitems):
	* gtk/gtkintl.h:
	* gtk/gtkmain.c (setlocale_initialization),
	(do_pre_parse_initialization), (gettext_initialization):
	* gtk/gtkstock.c (gtk_stock_lookup), (sgettext_swapped):
	Use g_dgettext() and g_dngettext().

2008-06-11  Matthias Clasen <mclasen@redhat.com>

	* docs/RELEASE-HOWTO: Updates

2008-06-11  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkdisplay-win32.c (gdk_display_get_name): As we don't
	support Win9x anyway, we can use ProcessIdToSessionId()
	unconditionally.

2008-06-11  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkfilechooserbutton.c: fix local prototype of
	_gtk_file_chooser_label_for_file() (takes a GFile, not const gchar*).

2008-06-10  Matthias Clasen <mclasen@redhat.com>

	Bug 536765 – GtkComboBox should set COMBO type hint for its menu

	* gtk/gtkoptionmenu.c:
	* gtk/gtkcombobox.c: Set the window type hint on popups.
	Patch by Danny Baumann

2008-06-10  Matthias Clasen <mclasen@redhat.com>

	* gtk/gtkfilesystem.c (get_icon_for_special_directory):
	(gtk_file_system_volume_render_icon): Add standard icon names,
	and also fall back to builtin gtk stock icons.

2008-06-10  Christian Persch  <chpe@gnome.org>
