@@ -1,3 +1,11 @@
+2008-06-12  Matthias Clasen  <mclasen@redhat.com>
+
+	RH bug 248245 and 449379: cups client printing from gnome
+	applications fail
+
+	* modules/printbackends/cups/gtkprintbackendcups.c: Really fix
+	printer URI construction. Patch by Marek Kasik
+	
 2008-06-12  Michael Natterer  <mitch@imendio.com>
 
 	* gtk/gtkentrycompletion.c (_gtk_entry_completion_resize_popup):
